src/objects/inscor__Docking_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Docking__c</fullName>
        <label>Docking</label>
        <referenceTo>inscor__Docking__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Docked__c</fullName>
        <label>Quantity Docked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Line</label>
        <referenceTo>inscor__RMA_Line__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Docking Lines</relationshipLabel>
        <relationshipName>Docking_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Docking Line</label>
    <nameField>
        <displayFormat>DKLN-{000}</displayFormat>
        <label>Docking Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docking Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>